# mf-core-ui-kit-autotests

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
automation/: conftest.py
automation/components/: status_tag.py
automation/config/: config.py
automation/core/: artifacts.py  browser.py
automation/pages/: base_page.py  status_tag_page.py  storybook_page.py
automation/tests/status_tag/: data.py  test_status_tag_colors.py  test_status_tag_label.py  test_status_tag_sizes.py  test_status_tag_smoke.py
automation/tools/: asserts.py  helper.py  logger.py  wait.py
scripts/: install_playwright.py
ui_kit_autotests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
